--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -12,11 +12,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/bottom_navigation_bar"
-            app:menu="@menu/bottom_nav_menu"
-            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-            android:layout_alignParentBottom="true"/>
+<!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/bottom_navigation_bar"-->
+<!--            app:menu="@menu/bottom_nav_menu"-->
+<!--            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"-->
+<!--            android:layout_alignParentBottom="true"/>-->
 </RelativeLayout>
