--- a/app/src/main/res/layout/anime_list_item.xml
+++ b/app/src/main/res/layout/anime_list_item.xml
@@ -7,16 +7,18 @@
     xmlns:tools="http://schemas.android.com/tools">
 
         <TextView
+            android:id="@+id/anime_list_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Sample Anime Name"
-            android:id="@+id/anime_list_name" />
+            android:textStyle="bold"
+            tools:text="Sample Anime Name" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="Sample Anime Rating"
             android:id="@+id/anime_list_rating"
-            android:gravity="end" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="end"
+            android:textStyle="bold"
+            tools:text="Sample Anime Rating" />
 
 </FrameLayout>
