--- a/app/src/main/res/layout/anime_list_item.xml
+++ b/app/src/main/res/layout/anime_list_item.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView10"
+            android:layout_width="match_parent"
+            android:layout_height="41dp"
+            android:alpha="0.3"
+            android:scaleType="matrix"
+            app:srcCompat="@drawable/graaaay" />
 
         <TextView
             android:id="@+id/anime_list_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="171dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="10dp"
+            android:textAlignment="center"
             android:textStyle="bold"
             tools:text="Sample Anime Name" />
 
@@ -19,6 +30,8 @@
             android:layout_height="match_parent"
             android:gravity="end"
             android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
             tools:text="Sample Anime Rating" />
 
 </FrameLayout>
