--- a/app/src/main/res/layout/anime_list_item.xml
+++ b/app/src/main/res/layout/anime_list_item.xml
@@ -20,8 +20,8 @@
             android:layout_width="171dp"
             android:layout_height="32dp"
             android:layout_marginTop="10dp"
-            android:textAlignment="center"
             android:textStyle="bold"
+            android:layout_marginStart="10dp"
             tools:text="Sample Anime Name" />
 
         <TextView
