--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -4,114 +4,120 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradientbackground"
     tools:context=".SignUpScreen">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="450dp"
-        android:layout_height="800dp"
-        app:srcCompat="@drawable/gradientbackground"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-68dp" />
+    <ScrollView
+        android:layout_width="409dp"
+        android:layout_height="243dp"
+        android:layout_marginTop="90dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:layout_editor_absoluteX="2dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="2dp"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/id_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="7dp"
+                android:ems="10"
+                android:hint="Email Address"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/id_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="7dp"
+                android:ems="10"
+                android:hint="Username"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/id_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="7dp"
+                android:ems="10"
+                android:hint="Password"
+                android:inputType="textPassword" />
+
+            <EditText
+                android:id="@+id/id_password_comfirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="7dp"
+                android:ems="10"
+                android:hint="Confirm Password"
+                android:inputType="textPassword" />
+
+            <EditText
+                android:id="@+id/id_birthday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="7dp"
+                android:ems="10"
+                android:hint="Birthday XX/XX/XXXX"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/id_gender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="7dp"
+                android:ems="10"
+                android:hint="Gender"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/id_phone_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Phone Number"
+                android:inputType="textPersonName" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="76dp"
+        android:layout_marginTop="116dp"
         android:fontFamily="@font/rubik_mono_one"
         android:text="Sign Up"
-        android:textColor="#FDFDFD"
+        android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="34sp"
-        android:onClick="backBtn"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="404dp"
-        android:layout_height="308dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="265dp"
-        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/editTextTextPersonName"
-            android:layout_width="match_parent"
-            android:layout_height="59dp"
-            android:layout_marginBottom="20dp"
-            android:ems="10"
-            android:fontFamily="monospace"
-            android:hint="Create Username"
-            android:inputType="textPersonName"
-            android:textAlignment="viewStart"
-            android:textColor="#EAE1E1"
-            android:textSize="20sp" />
-
-        <EditText
-            android:id="@+id/editTextTextPersonName9"
-            android:layout_width="match_parent"
-            android:layout_height="59dp"
-            android:layout_marginBottom="20dp"
-            android:ems="10"
-            android:fontFamily="monospace"
-            android:hint="Email Account"
-            android:inputType="textPersonName"
-            android:textAlignment="viewStart"
-            android:textColor="#EAE1E1"
-            android:textSize="20sp" />
-
-        <EditText
-            android:id="@+id/editTextTextPersonName10"
-            android:layout_width="match_parent"
-            android:layout_height="59dp"
-            android:layout_marginBottom="20dp"
-            android:ems="10"
-            android:fontFamily="monospace"
-            android:hint="Create Password"
-            android:inputType="textPersonName"
-            android:textAlignment="viewStart"
-            android:textColor="#EAE1E1"
-            android:textSize="20sp" />
-
-        <EditText
-            android:id="@+id/editTextTextPersonName11"
-            android:layout_width="match_parent"
-            android:layout_height="59dp"
-            android:layout_marginBottom="35dp"
-            android:ems="10"
-            android:fontFamily="monospace"
-            android:hint="Confirm Password"
-            android:inputType="textPersonName"
-            android:textAlignment="viewStart"
-            android:textColor="#EAE1E1"
-            android:textSize="20sp" />
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/signUpBtn"
+        android:id="@+id/create_account_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Sign Up"
+        android:layout_marginBottom="124dp"
+        android:text="Create Account"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/backToSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Go back to sign in page"
+        android:layout_marginTop="15dp"
+        android:text="Back to Sign in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/create_account_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
