--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -15,6 +15,8 @@
             android:id="@+id/imageView6"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:alpha="0.5"
+            android:backgroundTint="#A15353"
             android:scaleType="fitXY"
             android:src="@drawable/gradientbackground" />
 
@@ -33,6 +35,14 @@
             android:text="Profile Name"
             android:textAlignment="center"
             android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/imageView12"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:layout_marginTop="10dp"
+            android:src="@android:drawable/button_onoff_indicator_on" />
 
     </LinearLayout>
 
