--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -6,44 +6,108 @@
     android:layout_height="match_parent"
     tools:context=".UserProfileFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView6"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:alpha="0.5"
-            android:backgroundTint="#A15353"
-            android:scaleType="fitXY"
-            android:src="@drawable/gradientbackground" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="match_parent"
-            android:layout_height="169dp"
-            android:layout_marginTop="-190dp"
-            android:src="@drawable/ic_baseline_account_box_24" />
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:alpha="0.5"
+                android:scaleType="fitXY"
+                android:src="@drawable/gradientbackground" />
 
-        <TextView
-            android:id="@+id/profile_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-15dp"
-            android:text="Profile Name"
-            android:textAlignment="center"
-            android:textSize="16sp" />
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="match_parent"
+                android:layout_height="169dp"
+                android:layout_marginTop="-190dp"
+                android:src="@drawable/ic_baseline_account_box_24" />
 
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:layout_marginTop="10dp"
-            android:src="@android:drawable/button_onoff_indicator_on" />
+            <TextView
+                android:id="@+id/profile_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-15dp"
+                android:text="Profile Name"
+                android:textAlignment="center"
+                android:textSize="16sp" />
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="461dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:scaleType="centerCrop"
+                android:src="@android:drawable/button_onoff_indicator_on" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#887C7C"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/emailProfile"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:background="#CFD5CA"
+                    android:gravity="center"
+                    android:text="Email"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/usernameProfile"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:background="#CFD5CA"
+                    android:gravity="center"
+                    android:text="Username"
+                    android:textSize="30dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#8EABE6"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/birthdayProfile"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:background="#CFD5CA"
+                    android:gravity="center"
+                    android:text="Birthday"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/genderProfile"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:background="#CFD5CA"
+                    android:gravity="center"
+                    android:text="Gender"
+                    android:textSize="30sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </FrameLayout>
