--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -8,8 +8,8 @@
     tools:context=".SignUpScreen">
 
     <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="243dp"
+        android:layout_width="411dp"
+        android:layout_height="266dp"
         android:layout_marginTop="90dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_editor_absoluteX="2dp">
@@ -36,7 +36,8 @@
                 android:layout_marginBottom="7dp"
                 android:ems="10"
                 android:hint="Username"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:tag="usernametag" />
 
             <EditText
                 android:id="@+id/id_password"
