--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -10,6 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            tools:layout_editor_absoluteX="2dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -62,7 +67,7 @@
                     android:background="#CFD5CA"
                     android:gravity="center"
                     android:text="Email"
-                    android:textSize="30sp" />
+                    android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/usernameProfile"
@@ -73,7 +78,7 @@
                     android:background="#CFD5CA"
                     android:gravity="center"
                     android:text="Username"
-                    android:textSize="30dp" />
+                    android:textSize="24sp" />
 
             </LinearLayout>
 
@@ -92,7 +97,7 @@
                     android:background="#CFD5CA"
                     android:gravity="center"
                     android:text="Birthday"
-                    android:textSize="30sp" />
+                    android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/genderProfile"
@@ -103,11 +108,69 @@
                     android:background="#CFD5CA"
                     android:gravity="center"
                     android:text="Gender"
-                    android:textSize="30sp" />
+                    android:textSize="24sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#CA6B6B"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/birthdayProfile2"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:background="#CFD5CA"
+                    android:gravity="center"
+                    android:text="Birthday"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/birthdayProfile3"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:background="#CFD5CA"
+                    android:gravity="center"
+                    android:text="Birthday"
+                    android:textSize="24sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/birthdayProfile6"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:background="#CFD5CA"
+                    android:gravity="center"
+                    android:text="Birthday"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/birthdayProfile7"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_margin="15dp"
+                    android:layout_weight="1"
+                    android:background="#CFD5CA"
+                    android:gravity="center"
+                    android:text="Birthday"
+                    android:textSize="24sp" />
             </LinearLayout>
 
         </LinearLayout>
 
+        </ScrollView>
     </RelativeLayout>
 
 </FrameLayout>
