Fixed sign up page logic. Checking if fields are empty and incorrect password are now working.

--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="7dp"
                 android:ems="10"
-                android:hint="Birthday XX/XX/XXXX"
+                android:hint="Birthday MM/DD/YYYY"
                 android:inputType="textPersonName" />
 
             <EditText
