Organized and moved some files to folders for cleaner file structure. Created UserInformation POJO which will store the user's information when their account is created.

--- a/app/src/main/res/layout/fragment_anime_list.xml
+++ b/app/src/main/res/layout/fragment_anime_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AnimeListFragment">
+    tools:context=".fragments.AnimeListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/anime_list"
