--- a/app/src/main/res/layout/anime_list_item.xml
+++ b/app/src/main/res/layout/anime_list_item.xml
@@ -12,6 +12,8 @@
             android:layout_width="match_parent"
             android:layout_height="41dp"
             android:alpha="0.3"
+            android:clickable="true"
+            android:focusable="true"
             android:scaleType="matrix"
             app:srcCompat="@drawable/graaaay" />
 
@@ -28,10 +30,11 @@
             android:id="@+id/anime_list_rating"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="end"
-            android:textStyle="bold"
             android:layout_marginTop="10dp"
             android:layout_marginRight="5dp"
+            android:clickable="true"
+            android:gravity="end"
+            android:textStyle="bold"
             tools:text="Sample Anime Rating" />
 
 </FrameLayout>
