--- a/app/src/main/res/layout/activity_bottom_navigation_bar.xml
+++ b/app/src/main/res/layout/activity_bottom_navigation_bar.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/main_frame"
-        tools:ignore="ExtraText">
+        tools:ignore="ExtraText"
         android:layout_above="@id/main_nav">
     </FrameLayout>
 
