--- a/app/src/main/res/layout/anime_list_item.xml
+++ b/app/src/main/res/layout/anime_list_item.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_height="70dp"
+    android:layout_marginBottom="1dp"
     android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView10"
             android:layout_width="match_parent"
-            android:layout_height="41dp"
+            android:layout_height="wrap_content"
             android:alpha="0.3"
             android:clickable="true"
             android:focusable="true"
@@ -19,11 +19,11 @@
 
         <TextView
             android:id="@+id/anime_list_name"
-            android:layout_width="171dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:textStyle="bold"
-            android:layout_marginStart="10dp"
             tools:text="Sample Anime Name" />
 
         <TextView
@@ -34,6 +34,7 @@
             android:layout_marginRight="5dp"
             android:clickable="true"
             android:gravity="end"
+            android:onClick="addAnime"
             android:textStyle="bold"
             tools:text="Sample Anime Rating" />
 
