re-designed sign up page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,13 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="284dp"
         android:layout_marginEnd="36dp"
+        android:defaultFocusHighlightEnabled="false"
         android:ems="10"
+        android:focusableInTouchMode="true"
+        android:focusedByDefault="true"
         android:fontFamily="monospace"
         android:inputType="textPersonName"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,8 +34,11 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="36dp"
         android:ems="10"
+        android:focusableInTouchMode="true"
+        android:focusedByDefault="true"
         android:fontFamily="monospace"
         android:inputType="textPassword"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/usernameInput" />
@@ -59,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="72dp"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="sans-serif-medium"
         android:text="Sign In"
         android:textAlignment="center"
         android:textColor="#000000"
