--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradientbackground"
     tools:context=".SignUpScreen">
 
     <ScrollView
-        android:layout_width="411dp"
+        android:id="@+id/scrollView2"
+        android:layout_width="475dp"
         android:layout_height="266dp"
         android:layout_marginTop="90dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_editor_absoluteX="2dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="355dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="2dp"
             android:orientation="vertical">
@@ -26,15 +26,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="7dp"
                 android:ems="10"
+                android:fontFamily="sans-serif-light"
                 android:hint="Email Address"
                 android:inputType="textPersonName" />
 
             <EditText
                 android:id="@+id/id_username"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginBottom="7dp"
                 android:ems="10"
+                android:fontFamily="sans-serif-light"
                 android:hint="Username"
                 android:inputType="textPersonName"
                 android:tag="usernametag" />
@@ -45,6 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="7dp"
                 android:ems="10"
+                android:fontFamily="sans-serif-light"
                 android:hint="Password"
                 android:inputType="textPassword" />
 
@@ -54,6 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="7dp"
                 android:ems="10"
+                android:fontFamily="sans-serif-light"
                 android:hint="Confirm Password"
                 android:inputType="textPassword" />
 
@@ -63,6 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="7dp"
                 android:ems="10"
+                android:fontFamily="sans-serif-light"
                 android:hint="Birthday MM/DD/YYYY"
                 android:inputType="textPersonName" />
 
@@ -71,14 +76,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:fontFamily="sans-serif-light"
                 android:hint="Phone Number"
                 android:inputType="textPersonName" />
 
             <Spinner
                 android:id="@+id/spinner"
-                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp" />
 
         </LinearLayout>
     </ScrollView>
@@ -88,10 +94,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="116dp"
-        android:fontFamily="@font/rubik_mono_one"
+        android:fontFamily="sans-serif-medium"
         android:text="Sign Up"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,23 +105,37 @@
 
     <Button
         android:id="@+id/create_account_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="50dp"
         android:layout_marginBottom="124dp"
+        android:backgroundTint="#66F9b0"
         android:text="Create Account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
     <TextView
         android:id="@+id/backToSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:fontFamily="sans-serif-medium"
         android:text="Back to Sign in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_account_btn" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Create an account to MyAnimeList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
