Working on user anime fragment page. Will be similar to anime list fragment page for now. Once functionality is working, then we can change the design. Work in progress.

--- a/app/src/main/res/layout/fragment_user_anime_list.xml
+++ b/app/src/main/res/layout/fragment_user_anime_list.xml
@@ -1,197 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.UserAnimeListFragment">
+    tools:context=".fragments.UserAnimeListFragment"
+    android:orientation="vertical">
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/user_anime_list_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#F4F4EF">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/animeImage1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="2.5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_weight="1"
-                    android:scaleType="matrix"
-                    android:src="@drawable/fmab" />
-
-                <ImageView
-                    android:id="@+id/animeImage2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="2.5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="1"
-                    android:scaleType="matrix"
-                    android:src="@drawable/fmab" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/animeName1"
-                    android:layout_width="72dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="FMAB"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/animeName2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Death Note"
-                    android:textAlignment="center" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/animeRating1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Rating: 9.28/10"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/animeEpisodes1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="64/64" />
-
-                <TextView
-                    android:id="@+id/animeRating2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Rating: 8.63/10"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/animeEpisdoes2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="37/37" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/animeImage3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="2.5dp"
-                    android:layout_marginLeft="5dp"
-                    android:scaleType="matrix"
-                    android:src="@drawable/fmab" />
-
-                <ImageView
-                    android:id="@+id/animeImage4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="2.5dp"
-                    android:layout_marginRight="5dp"
-                    android:scaleType="matrix"
-                    android:src="@drawable/fmab" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/animeName4"
-                    android:layout_width="72dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="FMAB"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/animeName5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Death Note"
-                    android:textAlignment="center" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/animeRating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Rating: 9.28/10"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/animeEpisodes3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="64/64" />
-
-                <TextView
-                    android:id="@+id/animeRating3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Rating: 8.63/10"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/animeEpisodes4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="37/37" />
-            </LinearLayout>
-
-        </LinearLayout>
-    </ScrollView>
-
-</FrameLayout>
+    </androidx.recyclerview.widget.RecyclerView>
+</RelativeLayout>
